<resources>
    <string name="app_name">Find It</string>
    <string name="action_settings">Settings</string>
    <string name="game_title">Find It\u0020</string>
    <string name="play">PLAY</string>
    <string name="options">OPTIONS</string>
    <string name="help">HELP</string>
    <string name="image_content_description">image</string>
    <string name="option_heading">Choose \nWisely!!!!</string>
    <string name="back">back button</string>
    <string name="leader_board">leader board button</string>
    <string name="authors">By Kaitlynn, Lakshay, Sami, and Yangyang</string>
    <string name="skip">SKIP</string>
    <string name="score">Score:</string>
    <string name="draw_pile">Draw Pile</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="start_game">START GAME</string>
    <string name="you_win">You Win!</string>
    <string name="help_title">HELP</string>
    <string name="help_content">Link: <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">SFU HOME</a>
        \n\n<b>How to Play</b>
        \nThe objective of the game is to match all the images in the least amount of time.
        \n1 . You can change the image package, number of images on the card, number of cards, and mode in OPTIONS in main menu.
        If you want to get images from flickr or your own images click the + button.
        To remove images, simply click on the image you would like to remove.
        To add images click LAUNCH FLICKR or LAUNCH GALLERY and select the images you like, then you can press the back button.
        \n2 . Once you click START GAME the cards will flip, and will show a number of images.
        \n3 . Find and click the image on the draw pile which matches one on the discard pile.
        \n4 . Then the card on the draw pile is moved to the discard pile and the next card in the draw pile will flip.
        \n5 . This process is repeated until there are no more cards in the draw pile.
        \n6 . If your score is good enough you will be able to save your high score with a nickname.
        \n7 . The top 5 high scores can be viewed by clicking the trophy on the main menu.
        \n8 . If you would like to export the cards from the game, you can do so when the game is finished.
        Simply click the EXPORT IMAGES button and it will give you instructions on where to find them.
        \n9 . Click OK to go back to the main menu.

        \n\n<b>Citations</b>
        \nHelp: <a href="https://www.ryadel.com/en/dobble-spot-it-algorithm-math-function-javascript/">algorithm help</a>,
        <a href="https://stackoverflow.com/questions/2661536/how-to-programmatically-take-a-screenshot-on-android ">screen shot</a>,
        <a href="https://stackoverflow.com/questions/22532136/android-how-to-create-a-bitmap-from-a-string">bitmap to string</a>
        \nImages: <a href="http://www.clker.com/clipart-magnifying-glass-4.html">magnifying glass</a>,
        <a href="https://www.shutterstock.com/image-vector/apple-icon-vector-eps-10-1700911795">red apple</a>,
        <a href="https://www.dreamstime.com/fresh-cut-slice-orange-fruit-isolated-white-background-tangerine-organic-cartoon-style-vector-illustration-any-design-image172278946">orange</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/slice-of-ripe-watermelon-cartoon-vector-19048946">watermelon</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/pumpkin-isolated-on-white-background-cartoon-vector-26775102">pumpkin</a>,
        <a href="https://www.dreamstime.com/cute-cartoon-lemon-isolated-white-background-vector-illustration-cute-cartoon-lemon-isolated-white-background-flat-style-image163185148">lemon</a>,
        <a href="http://clipart-library.com/cartoon-pictures-of-apples.html">green apple</a>,
        <a href="https://www.pinterest.ca/pin/675610381577433241/">mango</a>,
        <a href="https://www.pinterest.ca/pin/597008494332117942/">lettuce</a>,
        <a href="https://www.shutterstock.com/image-vector/carrot-vegetable-isolated-on-white-vector-543845137">carrot</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/onion-isolated-vegetable-cartoon-badge-vector-23081042">onion</a>,
        <a href="https://www.shutterstock.com/image-vector/radish-vector-design-image-694738837">radish</a>,
        <a href="https://www.clipartkey.com/view/ihRwJJ_transparent-brocoli-clipart-cartoon-broccoli-png/">broccoli</a>,
        <a href="https://cliparts.zone/clipart/6536">eggplant</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/mushroom-champignon-flat-cartoon-vector-23098426">mushroom</a>,
        <a href="https://www.netclipart.com/isee/TbRii_common-ivy-plant-vine-clip-art-transparent-background/">card style</a>,
        <a href="https://www.starpik.com/shop/croquet-court-with-red-roses-green-garden-with-a-paved-road-illustration-raster-image-drawn-in-a-cartoon-style/">background</a>,
        <a href="https://www.shutterstock.com/image-vector/vector-garden-flat-cartoon-illustration-291373565">background</a>,
        <a href="https://www.dreamstime.com/cartoon-man-choosing-red-blue-pill-matrix-hand-drawn-illustration-colorful-image160029660">cartoon character</a>,
        <a href="https://www.shutterstock.com/image-vector/cut-half-whole-dragon-fruit-summer-1389534977">dragon fruit</a>,
        <a href="https://pngio.com/PNG/a109687-cartoon-pear-png.html">pear</a>,
        <a href="https://en.clipdealer.com/vector/media/A:59919918">plum</a>,
        <a href="https://www.cleanpng.com/png-clip-art-peach-illustration-royalty-free-image-go-6734382/">peach</a>,
        <a href="https://www.cleanpng.com/png-banana-fruit-clip-art-banana-leaves-692754/">banana</a>,
        <a href="https://www.pinterest.ca/pin/338966309435952487/">strawberry</a>,
        <a href="https://www.cleanpng.com/png-blackberry-pie-clip-art-blackberry-701694/">blackberry</a>,
        <a href="https://www.cleanpng.com/png-common-grape-vine-sultana-clip-art-purple-grapes-c-177917/">grapes</a>,
        <a href="https://www.pinterest.com.au/pin/637400153489180038/">cherry</a>,
        <a href="https://stock.adobe.com/nz/search?k=durian+cartoon&amp;asset_id=190980151">durian</a>,
        <a href="https://stock.adobe.com/nz/search/images?k=avocado%20cartoon">avocado</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/kiwi-cartoon-vector-19608370">kiwi</a>,
        <a href="https://www.cleanpng.com/png-green-papaya-salad-clip-art-hand-painted-papaya-fr-435146/">papaya</a>,
        <a href="https://www.cleanpng.com/png-pomegranate-fruit-vector-graphics-image-drawing-fr-6246660/">pomegranate</a>,
        <a href="https://www.cleanpng.com/png-carambola-fruit-salad-3d-creative-fruit-fruits-han-268141/">star fruit</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/cartoon-blueberries-with-leaves-isolated-vector-12842670">blueberries</a>,
        <a href="https://www.kissclipart.com/clip-art-clipart-cantaloupe-honeydew-clip-art-sf2lje/">melon</a>,
        <a href="https://www.netclipart.com/isee/bwRwRw_grapefruit-png-transparent-background-grapefruit-clipart/">grapefruit</a>,
        <a href="https://www.kindpng.com/imgv/hRwoxbb_pineapple-clipart-fancy-pineapple-clipart-hd-png-download/">pineapple</a>,
        <a href="https://www.freepik.com/premium-vector/fig-cartoon-set-icon-illustration-fruit-white-background-cartoon-set-icon-fig_8950840.htm">fig</a>,
        <a href="http://clipart-library.com/cranberry-cliparts.html">cranberry</a>,
        <a href="https://stock.adobe.com/uk/search?k=raspberry%20cartoon">raspberry</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/cartoon-fresh-coconut-isolated-on-white-background-vector-22734650">coconut</a>,
        <a href="https://www.pinterest.ca/pin/55943220348172482/">squash</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/fresh-kale-on-blue-balckground-vector-14531196">kale</a>,
        <a href="https://pngtree.com/freepng/cartoon-green-cucumber-illustration_4506235.html">cucumber</a>,
        <a href="https://dlpng.com/png/6282303">cabbage</a>,
        <a href="https://www.clipartmax.com/middle/m2i8Z5K9d3H7A0b1_cauliflower-cartoon-royalty-free-clip-art-cauliflower-cartoon/">cauliflower</a>,
        <a href="https://www.uihere.com/free-cliparts/baked-potato-mashed-potato-potato-salad-clip-art-potato-salad-cliparts-1124717">potato</a>,
        <a href="https://svg-clipart.com/food/ISmJBTE-celery-clipart">celery</a>,
        <a href="https://illustoon.com/?id=781">asparagus</a>,
        <a href="https://www.pinterest.com.au/pin/346777240058568900/">artichoke</a>,
        <a href="https://www.clipartqueen.com/vegetables-clipart.html">leek</a>,
        <a href="https://www.123rf.com/clipart-vector/okra.html?sti=my3cjse3a6rjs8p81r|">okra</a>,
        <a href="https://dlpng.com/png/4612380">corn</a>,
        <a href="https://illustoon.com/?id=795">garlic</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/cartoon-flat-bell-peppers-red-green-yellow-vector-14560346">bell peppers</a>,
        <a href="https://favpng.com/png_view/vegetable-vegetable-red-cabbage-anthocyanin-fruit-png/mGzGUG0U">red cabbage</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/parsnip-colored-botanical-vector-11874971">parsnip</a>,
        <a href="https://www.pinclipart.com/pindetail/JRJThJ_download-pea-clipart-png-photo-vegetables-vector-free/">peas</a>,
        <a href="https://www.123rf.com/clipart-vector/root_ginger.html?sti=nqhtrmx9hypt3xhht6|">ginger</a>,
        <a href="https://www.cleanpng.com/png-green-bell-pepper-seasonal-food-clip-art-1760309/">green bell pepper</a>,
        <a href="https://www.netclipart.com/isee/oihwwb_turnip-png-turnips-png/">turnip</a>,
        <a href="https://www.gograph.com/vector-clip-art/zucchini.html">zucchini</a>,
        <a href="https://www.clipartkey.com/view/hRJwbo_pimiento-bell-pepper-natural-foods-red-bell-pepper/">red bell pepper</a>,
        <a href="https://www.cleanpng.com/png-yam-sweet-potato-clip-art-potato-640425/">yam</a>,
        <a href="https://www.vectorstock.com/royalty-free-vector/cartoon-red-onion-bulb-vector-29564575">red onion</a>,
        <a href="https://clipartix.com/spinach-clipart-image-56587/">spinach</a>
        \nAudio: <a href="https://www.youtube.com/watch?v=worclOeTALw">correct/incorrect</a>,
        <a href="https://www.youtube.com/watch?v=GGoYBJvPEdY">win</a>,
        <a href="https://www.youtube.com/watch?v=aUOw02s9yV0">start</a>
    </string>
    <string name="enter_your_name">Enter a nickname:</string>
    <string name="your_name">your name</string>
    <string name="month_day_year">Month day, year</string>
    <string name="enter_played_date">Enter played date:</string>
    <string name="reset">Reset</string>
    <string name="leader_board_title">Leader Board</string>
    <string name="nickname">Nickname</string>
    <string name="no_answer">N/A</string>
    <string name="new_high_score">New High Score</string>
    <string name="num_of_cards">Number of Cards:</string>
    <string name="num_of_images">Number of Images Per Card:</string>
    <string name="words_and_images">Words &amp; Images</string>
    <string name="images">Images</string>
    <string name="mode">Mode:</string>
    <string name="date_format">Month DD, YYYY</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="launch_flickr">FLICKR</string>
    <string name="toast_not_enough_images">You must select a minimum of 7 images to use the custom package</string>
    <string name="toast_options_not_supported">There are not enough images in this packages to support this option</string>
    <string name="toast_mode_not_supported">Words and Images mode is not supported for the selected image package</string>
    <string name="difficulty_mode">Difficulty Mode:</string>
</resources>