<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/garden_rose"
    tools:context=".ui.OptionsActivity">

    <Button
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/back"
        android:foreground="@drawable/ic_arrow_back"
        android:foregroundGravity="center_vertical|right"
        android:foregroundTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/options"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title">

        <LinearLayout
            android:id="@+id/linear_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_vegs"
                android:layout_width="104dp"
                android:layout_height="90dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/image_content_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/vegs" />

            <ImageButton
                android:id="@+id/image_button_fruits"
                android:layout_width="104dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/image_content_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/fruits" />

            <ImageButton
                android:id="@+id/image_button_custom"
                android:layout_width="104dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_background"
                android:contentDescription="@string/image_content_description"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/custom_images" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_num_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_images"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/text_num_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_cards"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_num_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_num_images" />

    <Spinner
        android:id="@+id/spinner_num_images_per_card"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background"

        android:foreground="@drawable/ic_arrow_down"
        android:foregroundGravity="center_vertical|right"
        android:foregroundTint="#000000"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/text_num_images"
        app:layout_constraintStart_toEndOf="@+id/text_num_images"
        app:layout_constraintTop_toTopOf="@+id/text_num_images" />

    <Spinner
        android:id="@+id/spinner_num_cards"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background"
        android:foreground="@drawable/ic_arrow_down"
        android:foregroundGravity="center_vertical|right"
        android:foregroundTint="#000000"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/text_num_cards"
        app:layout_constraintStart_toEndOf="@+id/text_num_cards"
        app:layout_constraintTop_toTopOf="@+id/text_num_cards" />

    <TextView
        android:id="@+id/text_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/button_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background"
        android:text="@string/images"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_mode"
        app:layout_constraintStart_toEndOf="@+id/text_mode"
        app:layout_constraintTop_toTopOf="@+id/text_mode" />

    <Button
        android:id="@+id/button_words_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background"
        android:text="@string/words_and_images"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_images"
        app:layout_constraintStart_toEndOf="@+id/button_images"
        app:layout_constraintTop_toTopOf="@+id/button_images" />

    <TextView
        android:id="@+id/text_mode_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_mode"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <Spinner
        android:id="@+id/spinner_difficulty_mode"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background"
        android:foreground="@drawable/ic_arrow_down"
        android:foregroundGravity="center_vertical|right"
        android:foregroundTint="#000000"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/text_mode_difficulty"
        app:layout_constraintStart_toEndOf="@+id/text_mode_difficulty"
        app:layout_constraintTop_toTopOf="@+id/text_mode_difficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>