<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bananas_background"
    tools:context="cmpt276.project.ui.LeaderBoardActivity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:foreground="@drawable/ic_arrow_back"
        android:foregroundGravity="center_vertical|right"
        android:foregroundTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/reset"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textLeaderBoardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/leader_board_title"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutScores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLeaderBoardTitle" />

    <TextView
        android:id="@+id/textNumImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_images"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textLeaderBoardTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLeaderBoardTitle" />

    <TextView
        android:id="@+id/textNumCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_cards"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerNumImagesPerCardScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerNumImagesPerCardScores" />

    <Spinner
        android:id="@+id/spinnerNumImagesPerCardScores"
        android:layout_width="60dp"
        android:layout_height="46dp"

        android:layout_marginStart="8dp"
        android:background="@drawable/button_background"
        android:foreground="@drawable/ic_arrow_down"
        android:foregroundGravity="center_vertical|right"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/textNumImages"
        app:layout_constraintStart_toEndOf="@+id/textNumImages"
        app:layout_constraintTop_toTopOf="@+id/textNumImages" />

    <Spinner
        android:id="@+id/spinnerNumCardsScores"
        android:layout_width="60dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background"
        android:foreground="@drawable/ic_arrow_down"
        android:foregroundGravity="center_vertical|right"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/textNumCards"
        app:layout_constraintStart_toEndOf="@+id/textNumCards"
        app:layout_constraintTop_toTopOf="@+id/textNumCards" />

</androidx.constraintlayout.widget.ConstraintLayout>