<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/garden2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="0.01"
        android:text="@string/game_title"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/play"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/buttonOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:text="@string/options"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background"
        android:text="@string/help"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOptions"
        app:layout_constraintStart_toEndOf="@+id/buttonOptions"
        app:layout_constraintTop_toTopOf="@+id/buttonOptions" />

    <ImageButton
        android:id="@+id/buttonHighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_background"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPlay"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:srcCompat="@drawable/ic_trophy_black_30" />

    <ImageView
        android:id="@+id/basketFruit1"
        android:layout_width="80dp"
        android:layout_height="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/basketFruit3"
        app:layout_constraintEnd_toStartOf="@+id/basketFruit2"
        app:srcCompat="@drawable/basket_fruit_1" />

    <ImageView
        android:id="@+id/basketFruit2"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/basketFruit3"
        app:layout_constraintStart_toStartOf="@+id/basketFruit3"
        app:srcCompat="@drawable/basket_fruit_3" />

    <ImageView
        android:id="@+id/basketFruit3"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        app:srcCompat="@drawable/basket_fruit_2" />

    <ImageView
        android:id="@+id/basketVeg1"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/basketVeg3"
        app:layout_constraintEnd_toEndOf="@+id/basketVeg3"
        app:srcCompat="@drawable/basket_veg_1" />

    <ImageView
        android:id="@+id/basketVeg2"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/basketVeg3"
        app:layout_constraintStart_toStartOf="@+id/basketVeg3"
        app:srcCompat="@drawable/basket_veg_2" />

    <ImageView
        android:id="@+id/basketVeg3"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        app:srcCompat="@drawable/basket_veg_3" />

</androidx.constraintlayout.widget.ConstraintLayout>